# watertap-engine-mcp

./: .gitignore  BUGS.md  CLAUDE.md  LICENSE  README.md  cli.py  pyproject.toml  server.py  worker.py
.claude/: codex-loop.local.md
core/: __init__.py  property_registry.py  session.py  translator_registry.py  unit_registry.py  water_state.py
docs/plans/: code-review-feedback-plan.md  code-review-remediation-plan.md  e2e-test-suite-plan.md  implementation-plan.md
jobs/flowsheets/: 0027d82f-f37d-49cc-86b1-b2facb45d38a.json  01854e3e-7489-4ab1-aef7-81e20ef5d14b.json  03a4915f-f2c1-423d-894c-e721ad520642.json  05463b36-40df-48f3-963d-543afd98f712.json  056ae647-7a81-450d-bcb4-237d492d15d7.json  06526888-d0c5-4ceb-958d-5464847dfa31.json  07bfa6ea-ae16-4bf7-8772-dfe6c5efa5b5.json  0b4510cb-6888-4d26-8d60-8a820cc81952.json  0b668ea8-59b7-4b16-bfbf-50d7d0bc2b23.json  0c539111-fc3f-4080-882e-a3e55a034fb3.json  0f7bf59c-c4aa-458d-9cea-1a335ce470e2.json  1005f900-ab9a-487a-8177-be766487241d.json  115092c9-70ef-4dbd-a21e-d38d92cdaa56.json  1267dd37-cc3c-466e-a53e-3d9cb26e2092.json  12739369-bdf0-443c-a3d7-c6dbd055d316.json  12a625bd-5cbc-4de0-93ee-7d0219a9b4ca.json  137407c6-ae21-4083-b2a5-1461227dc16e.json  137a24a5-7e86-4476-abbc-17a2f8c8143d.json  1382dfb8-6119-42c1-b922-20d4a7899de2.json  138d2c93-f542-4689-8344-cd79cf15a02b.json  13cc99ae-6b2f-483f-936c-5e2af8e76670.json  18278cd3-12b2-4a36-84ef-f6321425b20e.json  186ea2d1-a5a7-4c28-9144-4fb81273fe54.json  18f97e23-5103-48c5-8d95-1b1563a2d23f.json  1a8863af-132c-4dcf-b1b0-69703df5f099.json  1adec256-a7a9-4182-a27b-d0b39e2dcd8f.json  1b448639-5256-43f5-a909-4de43c80776e.json  1b7fab42-8d93-43a2-834f-0834c0d686b0.json  1bb7a48f-e1c1-4769-a3ff-019451992e1e.json  1bd99f6c-307c-4a16-83a2-c5461d101c5b.json  1be6c7a8-3cfc-4bbf-8fdb-36144b6b5331.json  1c8938f6-30a4-449d-a364-7d972d7b5a8f.json  1d15b468-c9cb-4529-8234-c3caa7d94813.json  (+244 more)
solver/: __init__.py  diagnostics.py  dof_resolver.py  initializer.py  pipeline.py  recovery.py  scaler.py
templates/: __init__.py  mvc_crystallizer.py  nf_softening.py  ro_train.py
tests/: __init__.py  test_cli_parity.py  test_costing.py  test_integration.py  test_issue_fixes.py  test_path_resolution.py  test_registries.py  test_session.py  test_solver.py  test_templates.py  test_utils.py  test_validate_flowsheet.py  test_water_state.py
utils/: __init__.py  auto_translator.py  flowsheet_session.py  job_manager.py  model_builder.py  state_translator.py  topo_sort.py
(+111 files in other folders)
