[project]
name = "watertap-engine-mcp"
version = "0.1.0"
description = "MCP server for WaterTAP water treatment process modeling"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "WaterTAP Engine MCP"}
]
keywords = ["watertap", "mcp", "water-treatment", "desalination", "process-modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "mcp>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "watertap>=0.12.0",
    "idaes-pse>=2.4.0",
    "pyomo>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
watertap-engine-mcp = "server:main"
watertap-cli = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: fast isolated tests (no WaterTAP required)",
    "component: tests for individual components",
    "integration: tests requiring full WaterTAP/IDAES stack",
    "solver: tests that execute actual solver.solve()",
    "initialization: tests for initialization routines",
    "slow: tests that take >10 seconds",
]
# FAIL LOUDLY: Treat warnings as errors (except third-party library deprecations)
filterwarnings = [
    "error",
    # Ignore third-party library warnings we can't control
    "ignore::DeprecationWarning:idaes.*",
    "ignore::DeprecationWarning:pyomo.*",
    "ignore::DeprecationWarning:watertap.*",
    "ignore::PendingDeprecationWarning",
    # Ignore resource warnings from subprocess cleanup in tests
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
